@@ -74,6 +74,7 @@
     <Compile Include="Debugging.cs" />
     <Compile Include="GUI\UIPreviewRenderer.cs" />
     <Compile Include="GUI\Thumbnails.cs" />
+    <Compile Include="Interfaces.cs" />
     <Compile Include="ModUtils.cs" />
     <Compile Include="Notifications\ConflictNotification.cs" />
     <Compile Include="Notifications\ErrorNotification.cs" />
