@@ -1,6 +1,7 @@
 ﻿
 - Memory management: overwrite original thumbnail atlas when generating new thumbnails
 - Add additional public method calls for interfacing with other mods
+- Move all inter-mod public methods to new Interfaces class
 - Update translation framework
 - Overhaul XML settings file handling
 
